subunit (0.0.18-4) unstable; urgency=medium

  * control: Fix a minor typo in my name
  * Fix the clean target to be sure we can can do two build in a raw

 -- Gonéri Le Bouder <goneri@debian.org>  Sun, 20 Apr 2014 15:22:43 +0200

subunit (0.0.18-3) unstable; urgency=medium

  * Rebuilt with up-to-date env (Closes: #743717).

 -- Thomas Goirand <zigo@debian.org>  Sat, 05 Apr 2014 15:47:25 +0000

subunit (0.0.18-2) unstable; urgency=medium

  * Ensure we have the correct shebang in the subunit deb. (Closes: #743442)

 -- Thomas Goirand <zigo@debian.org>  Sat, 29 Mar 2014 19:47:03 +0800

subunit (0.0.18-1) unstable; urgency=medium

  [ James Page ]
  * d/rules: Avoid dh_python3 processing of subunit package so that shebangs
    don't get incorrectly changed to python3 versions.

  [ Thomas Goirand ]
  * Switches the package to the OpenStack PKG team, with previous agreement
    from Robert Collins (updated Uploaders, Maintainers, and VCS fields).
  * Adds python-testscenarios & python3-testscenarios as build-depends.
  * Removed explicit Depends: python in the subunit package, and leave this to
    dh_python2 to do its work.
  * debian/rules: Removed clean of .pyc, .pyo and __pycache__, since
    dh_python{2,3} does it all automatically.
  * Fixed debian/rules to use dh $@ and not dh $*, which was weird to me!
  * debian/rules: Added missing set -e in for loops.
  * Removed obsolete X-Python-Version: >= 2.4.
  * Standards-Version: is now 3.9.5.
  * Ran wrap-and-sort.
  * Added extend-diff-ignore = "^[^/]*[.]egg-info/" in debian/source/options.
  * Imported from Ubuntu package:
    - debian/rules: Remove moving around of Perl modules, upstream build system
    DTRT now.
    - debian/libsubunit-perl.install: Install Perl module directly from source
    tree, the upstream build system forgets to install it with separate build
    trees.

 -- Thomas Goirand <zigo@debian.org>  Tue, 11 Feb 2014 17:39:22 +0800

subunit (0.0.15-2) unstable; urgency=low
