@@ -2,6 +2,8 @@ subunit (0.0.18-4) unstable; urgency=medium
 
   * control: Fix a minor typo in my name
   * Fix the clean target to be sure we can can do two build in a raw
+  * Adjust arch all in build-indep target (Closes: #743717)
+   - thanks Ivo De Decker
 
  -- Gonéri Le Bouder <goneri@debian.org>  Sun, 20 Apr 2014 15:22:43 +0200
 
